Toolbar Example Draft HTML for issue #126
In aria-practices.html toolbar section,
added link to toolbar example page and removed link to exterrnal example.

In examples/toolbar/toolbar.html:
1. Wrote an example overview and Added link to issue 126.
2. Added accessibility feature descriptions.
3. Added keyboard support description.
4. Added role, state, and property information.
5. Updated links to js and css files.
6. Updated link in nav section to toolbar design pattern.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1557,7 +1557,6 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
 
     <section class="widget" id="toolbar">
       <h3>Toolbar</h3>
-
       <p>A <a class="role-reference" href="#toolbar">toolbar</a> is a container for grouping a set of controls, such as buttons, menubuttons, or checkboxes.</p>
       <p>
         When a set of controls is visually presented as a group, the <code>toolbar</code> role can be used to communicate the presence and purpose of the grouping to screen reader users.
@@ -1572,7 +1571,6 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
 
       <section class="notoc">
         <h4>Keyboard Interaction</h4>
-
         <ul>
           <li>
             <kbd>Tab</kbd>: Moves focus into and out of the toolbar.
@@ -1609,10 +1607,7 @@ For additional guidance, see <a href="#kbd_selection_follows_focus">Deciding Whe
 
       <section class="notoc">
         <h4>Example</h4>
-        <p class="note">Any examples referenced here that are hosted outside www.w3.org may have changed and may not accurately exemplify the guidance in this section. The APG task force is developing examples for APG version 1.1 that will be directly incorporated into the guide.</p>
-        <ul>
-          <li><a href="http://www.oaa-accessibility.org/examplep/toolbar1/" target="_blank" rel="nofollow">Open Ajax Alliance toolbar</a></li>
-        </ul>
+        <p><a href="examples/toolbar/toolbar.html">Toolbar Example</a>: A toolbar including buttons, links, and checkboxes that uses roving tabindex to manage focus.</p>
       </section>
     </section>
 
