--- a/examples/menubar/menubar-1/menubar-1.html
+++ b/examples/menubar/menubar-1/menubar-1.html
@@ -2,140 +2,199 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-
     <meta charset="utf-8">
-
-    <title>ARIA Menubar Example: Links</title>
+    <title>Navigation Menubar Example | WAI-ARIA Authoring Practices 1.1</title>
 
     <link href="../../css/core.css" rel="stylesheet">
     <link href="../../css/table.css" rel="stylesheet">
+    <script src="../../js/examples.js" type="text/javascript"></script>
     <link href="css/menubarLinks.css" rel="stylesheet">
-
     <script src="js/MenubarLinks.js"     type="text/javascript"></script> 
     <script src="js/MenubarItemLinks.js" type="text/javascript"></script> 
-
     <script src="js/PopupMenuLinks.js" type="text/javascript"></script> 
     <script src="js/MenuItemLinks.js" type="text/javascript"></script> 
-
   </head>
   <body>
     <main>
-      <h1>ARIA Menubar Example: Links</h1>
+      <h1>Navigation Menubar Example</h1>
       <p><strong>NOTE:</strong> Please provide feedback on this example in <a href="https://github.com/w3c/aria-practices/issues/145">issue 145</a>. </p>
-
-      <ul>
-        <li>List of pull down menu items that are links to other pages</li> 
-      </ul>
- 
-      <p><a href="../../aria-practices.html#menu">Authoring Practice Design Patten for Menubar</a></p>
-
+      <p>
+        Following are two implementations of the 
+        <a href="../../#menu">design Pattern for menubar</a>
+        that demonstrate how a menubar can be used for site navigation.
+        Each item in the menubars represents a section of the site and opens a pull down menu with links to pages within that section.
+        The examples differ only in how they are coded; see notes that follow each example.
+      </p>
       <section id="code-ex-1">
-
-        <h2>Example 1a: Explicit ARIA markup</h2>
-        <ul>
-          <li>This example includes the ARIA roles and properties in the source code for authors to easily see which elements the roles and properties need to be included.</li>
-          <li>This is useful for people writing their own scripts to see which elements need roles and properties.</li>
-        </ul>  
-
-        <ul id="menubar1" role="menubar" aria-label="Mythical University Menu 1">
-
-          <li>
-            <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
-
-            <ul role="menu">
-              <li><a role="menuitem" href="mb-about.html#overview">Overview</a></li>
-              <li><a role="menuitem" href="mb-about.html#admin">Administration</a></li>
-              <li><a role="menuitem" href="mb-about.html#facts">Facts</a></li>
-              <li><a role="menuitem" href="mb-about.html#tours">Campus Tours</a></li>
+        <h2>Examples</h2>
+        <section>
+          <h3 id="ex1_label">Example 1: Menubar With ARIA Markup in the HTML Source</h3>
+          <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
+          <div id="ex1">
+            <ul id="menubar1" role="menubar" aria-label="Mythical University Menu 1">
+              <li>
+                <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">About</a>
+                <ul role="menu">
+                  <li>
+                    <a role="menuitem" href="mb-about.html#overview">Overview</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-about.html#admin">Administration</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-about.html#facts">Facts</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-about.html#tours">Campus Tours</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
+                <ul role="menu">
+                  <li>
+                    <a role="menuitem" href="mb-admissions.html#apply">Apply</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-admissions.html#tuition">Tuition</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-admissions.html#signup">Sign Up</a>
+                  </li>
+                  <li role="separator"></li>
+                  <li>
+                    <a role="menuitem" href="mb-admissions.html#visit">Visit</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-admissions.html#photo">Photo Tour</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-admissions.html#connect">Connect</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
+                <ul role="menu">
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#colleges">Colleges &amp; Schools</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#programs">Programs of Study</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#honors">Honors Programs</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#online">Online Courses</a>
+                  </li>
+                  <li role="separator"></li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#explorer">Course Explorer</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#register">Register for Class</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#academic">Academic Calendar</a>
+                  </li>
+                  <li>
+                    <a role="menuitem" href="mb-academics.html#tanscripts">Transscripts</a>
+                  </li>
+                </ul>
+              </li>
             </ul>
-          </li>
-
-          <li>
-            <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Admissions</a>
-
-            <ul role="menu">
-              <li><a role="menuitem" href="mb-admissions.html#apply">Apply</a></li>
-              <li><a role="menuitem" href="mb-admissions.html#tuition">Tuition</a></li>
-              <li><a role="menuitem" href="mb-admissions.html#signup">Sign Up</a></li>
-              <li role="separator"></li>
-              <li><a role="menuitem" href="mb-admissions.html#visit">Visit</a></li>
-              <li><a role="menuitem" href="mb-admissions.html#photo">Photo Tour</a></li>
-              <li><a role="menuitem" href="mb-admissions.html#connect">Connect</a></li>
+          </div>
+          <div role="separator" id="ex1_end_sep" aria-labelledby="ex1_end_sep ex1_label" aria-label="End of"></div>
+          <h4>Notes</h4>
+          <ol>
+            <li>This example includes the ARIA roles and properties in the source code for authors
+              to easily see which elements the roles and properties need to be included.</li>
+            <li>This is useful for people writing their own scripts to see which elements need
+              roles and properties.</li>
+          </ol>
+        </section>
+        <section>
+          <h3 id="ex2_label">Example 2: ARIA markup added dynamically</h3>
+          <div role="separator" id="ex2_start_sep" aria-labelledby="ex2_start_sep ex2_label" aria-label="Start of"></div>
+          <div id="ex2">
+            <ul id="menubar2" aria-label="Mythical University Menu 2">
+              <li>
+                <a href="#">Research</a>
+                <ul>
+                  <li>
+                    <a href="mb-research.html#res-news">Research News</a>
+                  </li>
+                  <li>
+                    <a href="mb-research.html#res-centers">Reseach Centers</a>
+                  </li>
+                  <li>
+                    <a href="mb-research.html#res-find">Find an Expert</a>
+                  </li>
+                  <li>
+                    <a href="mb-research.html#res-park">Research Park</a>
+                  </li>
+                  <li>
+                    <a href="mb-research.html#res-comm">Technology Commercialization</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">Outreach</a>
+                <ul>
+                  <li>
+                    <a href="mb-outreach.html#comm-engage">Community Engagement</a>
+                  </li>
+                  <li>
+                    <a href="mb-outreach.html#copr-rel">Corporate Relations</a>
+                  </li>
+                  <li>
+                    <a href="mb-outreach.html#extension">Extension</a>
+                  </li>
+                  <li>
+                    <a href="mb-outreach.html#outreach-events">Outreach Events</a>
+                  </li>
+                </ul>
+              </li>
+              <li>
+                <a href="#">Arts and Culture</a>
+                <ul>
+                  <li>
+                    <a href="mb-arts.html#fas">College of Fine and Applied Arts</a>
+                  </li>
+                  <li>
+                    <a href="mb-arts.html#las">College of Liberal Arts and Sciences</a>
+                  </li>
+                  <li role="separator"></li>
+                  <li>
+                    <a href="mb-arts.html#cultural-center">Cultural Center</a>
+                  </li>
+                  <li>
+                    <a href="mb-arts.html#perfoming-arts">Performing Arts</a>
+                  </li>
+                  <li>
+                    <a href="mb-arts.html#art-museum">Art Museum</a>
+                  </li>
+                  <li>
+                    <a href="mb-arts.html#history-museum">History Museum</a>
+                  </li>
+                  <li>
+                    <a href="mb-arts.html#union">Student Union</a>
+                  </li>
+                </ul>
+              </li>
             </ul>
-          </li>
-
-          <li>
-            <a role="menuitem" aria-haspopup="true" aria-expanded="false" href="#">Academics</a>
-
-            <ul role="menu">
-              <li><a role="menuitem" href="mb-academics.html#colleges">Colleges &amp; Schools</a></li>
-              <li><a role="menuitem" href="mb-academics.html#programs">Programs of Study</a></li>
-              <li><a role="menuitem" href="mb-academics.html#honors">Honors Programs</a></li>
-              <li><a role="menuitem" href="mb-academics.html#online">Online Courses</a></li>
-              <li role="separator"></li>
-              <li><a role="menuitem" href="mb-academics.html#explorer">Course Explorer</a></li>
-              <li><a role="menuitem" href="mb-academics.html#register">Register for Class</a></li>
-              <li><a role="menuitem" href="mb-academics.html#academic">Academic Calendar</a></li>
-              <li><a role="menuitem" href="mb-academics.html#tanscripts">Transscripts</a></li>
-            </ul>
-          </li>
-        </ul>
-
-        <h2>Example 1b: ARIA markup added dynamically</h2>
-
-        <ul>
+          </div>
+          <div role="separator" id="ex2_end_sep" aria-labelledby="ex2_end_sep ex2_label" aria-label="End of"></div>
+          <h4>Notes</h4>
+          <ol>
             <li>This example the ARIA roles and properties are added by the scripts based on the structure of the HTML elements.</li>  
             <li>This can be used by authors to more easily add this script to their own projects and websites.</li>
-        </ul>
-
-        <ul id="menubar2" aria-label="Mythical University Menu 2" >
-
-          <li>
-            <a href="#">Research</a>
-
-            <ul>
-              <li><a href="mb-research.html#res-news">Research News</a></li>
-              <li><a href="mb-research.html#res-centers">Reseach Centers</a></li>
-              <li><a href="mb-research.html#res-find">Find an Expert</a></li>
-              <li><a href="mb-research.html#res-park">Research Park</a></li>
-              <li><a href="mb-research.html#res-comm">Technology Commercialization</a></li>
-            </ul>
-          </li>
-
-          <li>
-            <a href="#">Outreach</a>
-
-            <ul>
-              <li><a href="mb-outreach.html#comm-engage">Community Engagement</a></li>
-              <li><a href="mb-outreach.html#copr-rel">Corporate Relations</a></li>
-              <li><a href="mb-outreach.html#extension">Extension</a></li>
-              <li><a href="mb-outreach.html#outreach-events">Outreach Events</a></li>
-            </ul>
-          </li>
-
-          <li>
-            <a href="#">Arts and Culture</a>
-
-            <ul>
-              <li><a href="mb-arts.html#fas">College of Fine and Applied Arts</a></li>
-              <li><a href="mb-arts.html#las">College of Liberal Arts and Sciences</a></li>
-              <li role="separator"></li>
-              <li><a href="mb-arts.html#cultural-center">Cultural Center</a></li>
-              <li><a href="mb-arts.html#perfoming-arts">Performing Arts</a></li>
-              <li><a href="mb-arts.html#art-museum">Art Museum</a></li>
-              <li><a href="mb-arts.html#history-museum">History Museum</a></li>
-              <li><a href="mb-arts.html#union">Student Union</a></li>
-            </ul>
-          </li>
-
-        </ul>
-
-
-  
+          </ol>
+        </section>
       </section>    
-
+      <section>
       <h2 id="id_kbd">Keyboard Support</h2>
-
       <h3 id="id_kbd1">Menubar Menu Items</h3>
       <table aria-labelledby="id_kbd id_kbd1"> 
         <thead>
@@ -215,7 +274,6 @@
           </tr>
         </tbody>
       </table>
-
       <h3 id="id_kbd2">Popup Menu Items</h3>
       <table aria-labelledby="id_kbd id_kbd2"> 
         <thead>
@@ -306,21 +364,89 @@
           </tr>
         </tbody>
       </table>
+      </section>
+      <section>
+    <h2 id="rps_label">Role, Property, State, and Tabindex  Attributes</h2>
+    <!--
+      Update this table to describe how roles, properties, states, and tabindex are used in this example.  
+      If the content will vary significantly for the above implementations, make this a level 4 section inside each of the above level 3 implementation sections.
+    -->
+    <table aria-labelledby="rps_label">
+      <thead>
+        <tr>
+          <th>Attribute</th>
+          <th>Applied to Element</th>
+          <th>Usage</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th><code>role=&quot;ROLE_NAME&quot;</code></th>
+          <td><code>HTML_ELEMENT</code></td>
+          <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+        </tr>
+        <tr>
+          <th>
+            <!--  Specify states and properties used like this; replace with the attributes that are relevant. -->
+            <code>aria-labelledby=&quot;ID_REF&quot;</code>
+          </th>
+          <td><code>HTML_ELEMENT</code></td>
+          <td>Brief explanation of usage, purpose, benefit, and/or guidance that is relevant to this specific implementation.</td>
+        </tr>
+        <tr>
+          <th>And so on ... covering all relevant attributes</th>
+          <td>...</td>
+          <td>...</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+      <section>
+    <h2>Javascript and CSS Source Code</h2>
+    <!--  After the js and css files are named with the name of this example, change the href and text of the following 2 links to refer to the appropriate js and css files.  -->
+    <ul>
+      <li>
+        CSS:
+        <a href="css/menubarLinks.css" type="tex/css">menubarLinks.css</a>
+      </li>
+      <li>Javascript:
+      <ul>
+        <li><a href="js/MenubarItemLinks.js" type="text/javascript">MenubarItemLinks.js</a></li>
+        <li><a href="js/MenubarLinks.js" type="text/javascript">MenubarLinks.js</a></li>
+        <li><a href="js/MenuItemLinks.js" type="text/javascript">MenuItemLinks.js</a></li>
+        <li><a href="js/PopupMenuLinks.js" type="text/javascript">PopupMenuLinks.js</a></li>
+      </ul>
+      </li>
+    </ul>
+  </section>
+  <section>
+    <h2>HTML Source Code</h2>
+    <h3 id="sc1_label">Example 1: Menubar With ARIA Markup in the HTML Source</h3>
+    <div id="sc1_start_sep" role="separator" aria-labelledby="sc1_start_sep sc1_label" aria-label="Start of HTML for"></div>
+    <div id="sc1"></div>
+    <div id="sc1_end_sep" role="separator" aria-labelledby="sc1_end_sep sc1_label" aria-label="End of HTML for"></div>
+    <script>sourceCode.add('sc1', 'ex1')</script>
 
+    <h3 id="sc2_label">Example 2: ARIA markup added dynamically</h3>
+    <div id="sc2_start_sep" role="separator" aria-labelledby="sc2_start_sep sc2_label" aria-label="Start of HTML for"></div>
+    <div id="sc2"></div>
+    <div id="sc2_end_sep" role="separator" aria-labelledby="sc2_end_sep sc2_label" aria-label="End of HTML for"></div>
+    <script>sourceCode.add('sc2', 'ex2')</script>
+    <!--  After all source has been added, run make to do the insert.  -->
+    <script> sourceCode.make() </script>
+  </section>
   </main>
-
+  <nav>
+    <a href="../../../#menu">Menu or Menubar Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+  </nav>
   <script type="text/javascript">
-
     window.onload=function() {
       var menubar = new Menubar(document.getElementById('menubar1'));
       menubar.init();
-
       menubar = new Menubar(document.getElementById('menubar2'));
       console.log(menubar);
       menubar.init();
     }    
-
   </script>
-
   </body>
   </html>
