Added Keyboard section

--- a/examples/accordion/accordion1.html
+++ b/examples/accordion/accordion1.html
@@ -164,24 +164,10 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>
-                        <em>key 1
-                    </td>
-                    <td>Key 1 action</td>
-                </tr>
-                <tr>
-                    <td>
-                        <em>key 2
-                    </td>
-                    <td>Key 2 action</td>
-                </tr>
-                <tr>
-                    <td>
-                        <em>key 3
-                    </td>
-                    <td>Key 3 action</td>
-                </tr>
+              <tr>
+                <td>Space or enter</td>
+                <td>Expand (or collapse if panel can be toggled) Accordion Panel</td>
+              </tr>
             </tbody>
         </table>
     </section>
